--- a/config.json
+++ b/config.json
@@ -2,6 +2,6 @@
 	"bot_token": "",
 	"blacklisted_channels": ["『💬』chat", "『📷』images", "『🤖』bot-channel", "『✅』bump-us", "『📺』unlimited-ads"],
 	"blacklisted_roles": ["Owner", "Staff"],
-	"rules": "**Rules**:\n➥ Post an invite with a description\n➥ You can only post 10 invites per day (unlimited not included)\n➥ Automatic advertisements or premium? Go to:\n https://www.patreon.com/advertisecentral",
+	"rules": "**Rules**:\n➥ Post an invite with a description\n➥ You can only post 10 invites per day (unlimited not included)\n➥ **Your advertisement will get removed once you leave**",
 	"advertisements_per_day": 10
 }
