--- a/config.json
+++ b/config.json
@@ -3,5 +3,6 @@
 	"blacklisted_channels": ["『💬』chat", "『📷』images", "『🤖』bot-channel", "『✅』bump-us", "『📺』unlimited-ads"],
 	"blacklisted_roles": ["Owner", "Staff"],
 	"rules": "**Rules**:\n➥ Post an invite with a description\n➥ You can only post 10 invites per day (unlimited not included)\n➥ **Your advertisement will get removed once you leave**",
+	"rules1": "**Rules**:\n➥ No reward servers\n➥ Must be Discord TOS friendly and legal\n➥ No NSFW at all",
 	"advertisements_per_day": 10
 }
